feat: hello world
Signed-off-by: Adithya Krishna <aadithya794@gmail.com>

--- a/node/package.json
+++ b/node/package.json
@@ -9,7 +9,11 @@
     },
     "keywords": [],
     "author": "",
-    "license": "ISC",
+    "license": "See License in <https://github.com/reclaimprotocol/.github/blob/main/LICENSE>",
+    "bugs": {
+      "url": "https://github.com/reclaimprotocol/reclaim-nibiru-sdk/issues"
+    },
+    "homepage": "https://github.com/reclaimprotocol/reclaim-nibiru-sdk/",
     "dependencies": {
       "@nibiruchain/nibijs": "^0.21.45",
       "dotenv": "^16.4.1"
